--- a/css/style1.css
+++ b/css/style1.css
@@ -343,23 +343,26 @@ a {
     color: var(--mini-calor);
 }
 
-.sign-up-form .form-field:hover {
-    fill: var(--additional-color);
-}
-
-.sign-up-form .form-field:focus {
-    fill: var(--additional-color);
-}
-
-
-.sign-up-form .form-field input:hover {
+.input-style:hover {
     border-color: var(--additional-color);
     outline: var(--additional-color);
 }
 
-.sign-up-form .form-field input:focus {
+.input-style:focus {
     border-color: var(--additional-color);
     outline: var(--additional-color);
+}
+
+.input-style:hover+.input-icon,
+.input-style:focus+.input-icon {
+    fill: var(--additional-color);
+
+}
+
+
+.input-icon:focus,
+.input-icon:hover {
+    fill: var(--additional-color);
 }
 
 
@@ -374,7 +377,7 @@ a {
     outline: var(--additional-color);
 }
 
-.sign-up-form .form-field input {
+.input-style {
     margin-top: 4px;
     width: 100%;
     height: 40px;
@@ -384,6 +387,7 @@ a {
     padding-top: 12px;
     padding-bottom: 12px;
     cursor: pointer;
+    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .title-window {
@@ -395,6 +399,7 @@ a {
     letter-spacing: 0.03em;
     color: #212121;
     margin-bottom: 12px;
+    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -404,6 +409,7 @@ a {
     width: 448px;
     cursor: pointer;
     margin-top: 4px;
+    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .check-box {
@@ -430,6 +436,7 @@ a {
     margin-top: 30px;
     justify-content: center;
     font-weight: bold;
+    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .model-window-btn:hover {
@@ -453,6 +460,7 @@ a {
 .input-icon {
     position: absolute;
     transform: translate(12px, 32px);
+
 }
 
 .text-box {
@@ -497,6 +505,7 @@ a {
     height: 70px;
     left: 0;
     width: 70px;
+
 }
 
 .close-icon {
@@ -509,6 +518,7 @@ a {
 .feature-list {
     display: flex;
     justify-content: center;
+
 }
 
 .feature-list .marks {
